# sms-microservice

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  qreeket.sms.sql
locales/: en.yml
src/: main.rs  server.rs
src/config/: db.rs
